trying to get current version, having trouble merging

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <head>
         <title id="title"> Chat </title>
         <link rel="stylesheet" href="css/main.css">
-        <link rel="shortcut icon" href="public/images/favicon-16x16.png" type="image/x-icon" />
-        <center><a href="index.html"><IMG SRC="public/images/wipChattyPenguin.png" href="index.html"> </a></center>
+        <link rel="shortcut icon" href="images/favicon-16x16.png" type="image/x-icon" />
+        <center><a href="index.html"><IMG SRC="images/wipChattyPenguin.png" href="index.html"> </a></center>
         <!--
         <h1 class="header" align="center"> <b> The Chatty Penguin </b> </h1>
         -->
@@ -17,7 +17,6 @@
             Your browser does not support canvas!
         </canvas>
 -->
-
 
             <!--Input box for name-->
         <div class="chat">
