should be merged correctly with origin branch

--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,12 @@
     <head>
         <title id="title"> Chat </title>
         <link rel="stylesheet" href="css/main.css">
-<<<<<<< HEAD
         <link rel="shortcut icon" href="images/favicon-16x16.png" type="image/x-icon" />
-        <center><a href="index.html"><IMG SRC="images/wipChattyPenguin.png" href="index.html"> </a></center>
-        <!--
-        <h1 class="header" align="center"> <b> The Chatty Penguin </b> </h1>
-        -->
-    </head>
-
-    <body>
-<!--
-        <canvas id="canvas" class="canvas" width="400" height="100">
-            Your browser does not support canvas!
-        </canvas>
--->
-=======
-        <link rel="shortcut icon" href="public/images/favicon-16x16.png" type="image/x-icon" />
-        <center><a href="index.html"><img src="public/images/wipChattyPenguin.png" href="/"> </a></center>
+        <center><a href="index.html"><img src="images/wipChattyPenguin.png" href="/"> </a></center>
     </head>
 
     <body>
         <div class="chat">
->>>>>>> e38b2dcd98ba46c87d29de6aae9cfa8d3c97debc
 
             <!--Input box for name-->
             <div style="float:left; width:50%;">
